--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,19 +12,18 @@ body {
     text-align: center;
     background-color: white;
     font-family: cursive;
-    font-size: xx-large;
 }
 
 h1 {
     margin: 0 auto 0 auto;
     font-family: 'Sacramento', cursive;
-    font-size: xx-large;
+    font-size: 2rem;
 }
 
 h2,
 h3 {
     font-family: 'Montez', cursive;
-    font-size: xx-large;
+    font-size: 1.79rem;
     color: #6BBFBF;
 }
 
@@ -38,26 +37,22 @@ hr {
 p {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Moon Dance', cursive;
-    font-size: x-large;
+    font-size: 1.5rem;
     color: rgb(83, 104, 74);
 }
 
 .certificate{
     font-family: 'Montserrat', sans-serif;
     font-family: 'Moon Dance', cursive;
-    font-size: x-large;
     color: rgb(83, 104, 74);
 }
 
 .copyright {
     color: #EAF6F6;
-    font-size: 1rem;
     padding: 20px 0;
-}
-
-.contact_message {
     width: 40%;
     margin: 40px auto;
+    font-size: 1.3rem;
 }
 
 .top_cloud_img {
@@ -84,8 +79,12 @@ p {
     left: 12%;
 }
 
-.intro {
-    font-size: xx-large;
+.intro-h{
+    font-size: 1.7rem;
+}
+
+.intro-p{
+    font-size: 1.2rem;
 }
 
 .mountain_img {
@@ -159,20 +158,23 @@ p {
     padding-right: 5%;
 }
 
-#intro {
+#intro{
     position: absolute;
-    padding: auto;
+    top: 45%;
+    left: 45%;
     color: black;
 }
 
 #top_container {
     background-color: skyblue;
     position: relative;
+    text-align: center;
 }
 
 #mid_container {
     background-color: white;
     margin: 100px 0;
+    text-align: center;
 }
 
 #bottom_container {
@@ -184,3 +186,4 @@ p {
 #pro:hover {
     text-decoration: underline;
 }
+
